# graphMT

./: Makefile  Makefile.am  README.md  antigen  autogen  configure.ac  main.cc
config/: cg.src.ini  cg.tgt.ini  cs.src.ini  cs.tgt.ini  extract_features.ini  propagate_graph.ini  select_unlabeled.ini
scripts/: analyze_pt.py  filter_pt.py  lexical_scorer.py  strip_pt.py
src/: featext.cc  featext.h  graph.cc  graph.h  lexical.cc  lexical.h  main.cc  options.cc  options.h  phrases.cc  phrases.h
